Added Github Repo URL and removed normalization content.

--- a/skelly-grid.css
+++ b/skelly-grid.css
@@ -4,9 +4,8 @@
   Copyright by Eric Liang
   Open Source License: MIT
   v. 1.0
+  https://github.com/ewliang/Skelly
 */
-
-/*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
 
 /***************************/
 /* Skelly Grid Source Code */
