--- a/style.css
+++ b/style.css
@@ -53,6 +53,17 @@ a {
   text-align: center;
 }
 
+.main-footer {
+  width: 100%;
+  left: 0;
+  bottom: 0 !important;
+  position: absolute;
+}
+
+.text-center {
+  text-align: center;
+}
+
 .col-1,
 .col-2,
 .col-3,
