--- a/style.css
+++ b/style.css
@@ -14,16 +14,16 @@ html {
   font-family: "Open Sans",sans-serif;
   font-family: "Open Sans";
   font-size: 14px;
-  line-height: 1.8em;
+  line-height: 1.7;
   text-transform: none;
   text-decoration: none;
   letter-spacing: 1px;
   font-weight: 400;
   font-style: normal;
-  color: #515151;
+  color: #777;
 }
 
-h1 {
+h1, h2, h3, h4, h5, h6 {
   font-size: 22px;
   font-weight: 400;
   letter-spacing: 1px;
@@ -32,20 +32,22 @@ h1 {
 }
 
 a {
+  color: #3498db;
   text-decoration: none;
 }
 
 /* CUSTOM */
 .btn {
-  color: #bbb;
+  color: #fff;
   font-size: 12px;
   font-weight: 100;
-  background-color: #eee;
+  background-color: #222;
   text-transform: uppercase;
   display: block;
-  padding: 3% 6%;
+  padding: 3% 5%;
 }
 
+/* SECTIONS */
 .main-header {
   width: 100%;
   max-width: 500px;
@@ -53,29 +55,32 @@ a {
   text-align: center;
 }
 
-.main-footer {
-  width: 100%;
-  left: 0;
-  bottom: 0 !important;
-  position: absolute;
+.main-nav ul {
+  padding: 0;
 }
+
+.main-nav li {
+  list-style: none;
+}
+
+.main-footer {
+  padding: 1% 3%;
+}
+
+/* GENERAL */
 
 .text-center {
   text-align: center;
 }
 
-.col-1,
-.col-2,
-.col-3,
-.col-4,
-.col-5,
-.col-6,
-.col-7,
-.col-8,
-.col-9,
-.col-10,
-.col-11,
-.col-12 {
+.clearfix:after {
+  content: '';
+  display: table;
+  clear: both;
+}
+
+.col-color {
+  color: #fff;
   background-color: #3498db;
   text-align: center;
   border-radius: 5px;
